--- a/ia/end.html
+++ b/ia/end.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-    <div id="main-box">
+    <div id="end-box" class="main-box">
         <div class="center">
             <div class="top3">
                 <div class="two item">
