change function name

--- a/ia/index.html
+++ b/ia/index.html
@@ -246,8 +246,8 @@
     <!-- script -->
     <script>
         includeHTML();
-        startGamePage();
-        // endBoxIntroStart();
+        startGamePage();  // call startGamePage() to start main game page
+        // startEndPage();  // call startEndPage() to start end page
     </script>
 
 </body>
