--- a/ia/index.html
+++ b/ia/index.html
@@ -52,7 +52,9 @@
             <div class="game-button"></div>
             <div class="game-button"></div>
             <div class="game-button"></div>
-            <div id="game-start-count" class="game-start-count disable"></div>
+            <span>
+                <div id="game-start-count" class="game-start-count disable"></div>
+            </span>
         </div>
 
         <div id="continue-button" class="console">
