--- a/ia/index.html
+++ b/ia/index.html
@@ -53,7 +53,7 @@
             <div class="game-button"></div>
             <div class="game-button"></div>
             <span>
-                <div id="game-start-count" class="game-start-count disable"></div>
+                <div id="game-start-count" class="game-start-count"></div>
             </span>
         </div>
 
