--- a/ia/index.html
+++ b/ia/index.html
@@ -35,6 +35,22 @@
             </div>
         </div>
 
+        <div class="console">
+            <div class="icon-bar frame">
+                <div>
+                    <img src="./svg/icon/mistake.svg" width="50">
+                </div>
+                <div>
+                    <img src="./svg/icon/mistake.svg" width="50">
+                </div>
+                <div>
+                    <img src="./svg/icon/mistake.svg" width="50">
+                </div>
+            </div>
+
+        </div>
+        <br/>
+        
         <div class="game-box frame button">
             <div class="game-button"></div>
             <div class="game-button"></div>
