--- a/ia/index.html
+++ b/ia/index.html
@@ -158,8 +158,25 @@
                 <div class="overlay"></div>
                 <dr class="content">
                     <div class="close-btn" onclick="togglePopup()"><img src="./svg/icon/x.svg" width="15"></div>
-                    <span class="colorful-texts" colorful-id="how-to-play"></span>
-                    <p>W<br />W<br />W<br />W<br />W<br />W<br />W<br />WWWWWWWWWWWWWWWWWWW</p>
+                    <img src="./svg/icon/HowToPlay.svg" width="350">
+                    <p>
+                        <div class="text">
+                            Shapes will be shown before the game starts, for a few seconds, and you can choose to skip it after watching.<br />
+                            After the game starts, the upper right corner will display the Shape or color you need to find. <br />If you find it successfully, you will get 10 points. You need to answer 4 questions correctly in each level to pass.<br />
+                            After completion, you will enter the next level.<br />
+                            The goal is to get more points before the game is over.<br /><br />
+                        </div>
+
+                        <div class="title">End Condition</div><br />
+                        <div class="text">Failed to complete a level within 10s<br />
+                        Total error more than 3 times<br /></div>
+                        <div class="remark">* There will be a brief prompt after the error, showing the position of the Shapes and colors<br /><br /></div>
+
+                        <div class="title">Leaderboard</div><br />
+                        <div class="text">
+                            If your score reaches the top 10, the score will be recorded on the leaderboard, if the score is the same, <br />it will be ranked according to the completion date.
+                        </div>
+                    </p>
             </div>
         
             <div class="intro">
