--- a/ia/index.html
+++ b/ia/index.html
@@ -112,9 +112,10 @@
                     <div class="frame-box" w3-include-html="./svg/icon/start.svg"></div>
                 </div>
             </div>
+            <!-- dark mode button -->
             <div class="ctrl-button frame button">
                 <div onclick="darkMode();">
-                    <div class="frame-box" w3-include-html="./svg/icon/start.svg"></div>
+                    <div class="frame-box" w3-include-html="./svg/icon/DarkMode.svg"></div>
                 </div>
             </div>
             <!-- help button -->
