--- a/ia/index.html
+++ b/ia/index.html
@@ -7,8 +7,8 @@
 
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/index.css" />
-    <link rel="stylesheet" href="./css/leaderboard-wide.css" />
-    <!-- <link rel="stylesheet" href="./css/leaderboard-wide.css" /> -->
+    <link rel="stylesheet" href="./css/leaderboard-tall.css" media="only screen and (max-aspect-ratio: 5/4)"/>
+    <link rel="stylesheet" href="./css/leaderboard-wide.css" media="only screen and (min-aspect-ratio: 5/4)"/>
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://use.typekit.net/iju2lko.css">
@@ -108,7 +108,7 @@
 
         <div id="continue-button" class="console">
             <div class="ctrl-button frame button">
-                <div onclick="startEndPage();">
+                <div onclick="startPage(2);">
                     <div class="frame-box" w3-include-html="./svg/icon/start.svg"></div>
                 </div>
             </div>
@@ -212,7 +212,7 @@
     </div>
     <!-- end of game-box -->
 
-    <div id="end-box" class="main-box ">
+    <div id="score-box" class="main-box ">
         <div class="center">
             <div class="top3">
                 <div class="two item">
