--- a/ia/index.html
+++ b/ia/index.html
@@ -189,7 +189,7 @@
                     <div class="title">End Condition</div><br />
                     <div class="text">Failed to complete a level within 10s<br />
                     Total error more than 3 times<br /></div>
-                    <div class="remark">* There will be a brief prompt after the error, showing the position of the Shapes and colors<br /><br /></div>
+                    <div class="remark">* There will be a brief prompt after the error, showing the position of the Shapes and colors<br /></div><br /><br />
 
                     <div class="title">Leaderboard</div><br />
                     <div class="text">
