--- a/ia/index.html
+++ b/ia/index.html
@@ -280,7 +280,7 @@
                 </div>
             </div>
         </div>
-        <div id="continue-button" class="ctrl-console console">
+        <div id="leaderboard-bottom-console" class="ctrl-console console">
             <a href="index.html">
                 <div class="ctrl-button frame button">
                     <div w3-include-html="./svg/icon/again.svg">
