--- a/ia/3rdParty/sharing.html
+++ b/ia/3rdParty/sharing.html
@@ -1,4 +1,4 @@
-<a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-text="I have gotten" data-show-count="false">
-	Tweet
+<a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-text="I have gotten" data-show-count="true">
+	Tweet to twitter
 </a>
-<div class="fb-share-button" data-href="http://localhost/" data-layout="button_count" data-size="large"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Flocalhost%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
+<div class="fb-share-button" data-href="http://localhost/" data-layout="button_count" data-size="small"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Flocalhost%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share to facebook</a></div>
