leaderboard css (change with page size), dark mode code and button

--- a/ia/StartPage.html
+++ b/ia/StartPage.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="./css/index.css" />
     <link rel="icon" type="image/x-icon" href="./svg/icon/icon.svg">
     <script type="text/javascript" src="./script/w3c-includeHTML.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <div id="start-box" class="main-box">
